<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.onlinestoreapp.ui.fragments.createproductfragment.CreateProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.createproductfragment.CreateProductFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#F4F9FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.utils.widget.ImageFilterButton
                android:id="@+id/imageFilterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@color/main_background_color"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextTitleMainStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/horizontal_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_product_image_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_add" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_input"
                style="@style/MainTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/product_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/add_product_image_button"
                app:layout_constraintTop_toBottomOf="@+id/add_product_image_button">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.productName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_description_input"
                style="@style/MainTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:hint="@string/product_description"
                app:layout_constraintEnd_toEndOf="@+id/product_name_input"
                app:layout_constraintStart_toStartOf="@+id/product_name_input"
                app:layout_constraintTop_toBottomOf="@+id/product_name_input"
                app:startIconDrawable="@drawable/ic_baseline_description_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.productDescription}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_picker_input"
                style="@style/MainTextInputStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/price"
                app:layout_constraintEnd_toEndOf="@+id/product_name_input"
                app:layout_constraintStart_toStartOf="@+id/product_name_input"
                app:layout_constraintTop_toBottomOf="@+id/product_description_input"
                app:startIconDrawable="@drawable/ic_money">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/add_product_button"
                android:layout_width="64dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#445975"
                app:cardCornerRadius="6dp"
                android:onClick="@{()->viewModel.addProduct()}"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="@+id/price_picker_input"
                app:layout_constraintTop_toBottomOf="@+id/price_picker_input">

                <TextView
                    style="@style/TextTitleMainStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Add"
                    android:textColor="@color/main_background_color"
                    android:textSize="16sp" />
            </com.google.android.material.card.MaterialCardView>

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/add_product_image_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_product_image_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>